change to upload_data_page.html

--- a/fileShareApp/templates/upload_data_page.html
+++ b/fileShareApp/templates/upload_data_page.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Recalls Dash {% endblock %}
+{% block title %} KM File Share {% endblock %}
 {% block main %}
 
 <section class="dashboard">
